--- a/domain/index.html
+++ b/domain/index.html
@@ -54,7 +54,7 @@
 					<div class="col-lg-7">
 						<div class="story-content">
 							<ul class="unordered-list">
-										<li>We use DAN.com domain escrow service ensuring safe transactions</li>
+										<li>We use DAN.com domain escrow ensuring safe transactions</li>
 										<li>DAN.com accepts global payments & has a passionate support team</li>
 										<li>Domain delivery time is 12 - 48 hours after payment confirmation</li>
 							</ul>
@@ -151,7 +151,7 @@
 	function handle_response(response) {
 			if(response.hasOwnProperty('dn')) {
 				document.getElementById("contact").style.display = ""
-				document.getElementById("domain-title").innerHTML = 'Buy ' + response['dn']
+				document.getElementById("domain-title").innerHTML = response['dn']
 				document.getElementById("status-msg").innerHTML = "The domain name <b>" + response['dn'] + '</b> is for sale, you can buy it now for $69 only.'
 				if(response.hasOwnProperty('dan')) {
 					document.getElementById("cta-text").innerHTML = response['cta-text']
